--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "@react-input/number-format": "^2.0.3",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@tanstack/react-query": "^5.90.2",
+    "antd": "^5.27.4",
+    "axios": "^1.12.2",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.18",
+    "i": "^0.3.7",
     "isbot": "^5.1.31",
+    "lodash": "^4.17.21",
+    "npm": "^11.6.1",
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2"
@@ -19,9 +30,11 @@
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "sass-embedded": "^1.93.2",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
