--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@react-input/number-format": "^2.0.3",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
