--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "npx serve build/client -p 5000",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@react-input/number-format": "^2.0.3",
-    "@react-router/node": "^7.9.2",
-    "@react-router/serve": "^7.9.2",
+    "@react-router/node": "^7.12.0",
+    "@react-router/serve": "^7.12.0",
     "@tanstack/react-query": "^5.90.2",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
@@ -26,7 +26,8 @@
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.12.0"
+    "react-router": "^7.12.0",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
