--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.12.0",
-    "serve": "^14.2.5"
+    "serve": "^14.2.5",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
